--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="selectDiffculty">选择难度</string>
     <string name="selectType">选择词汇类型</string>
     <string name="passWord">不知道，过</string>
-    <string name="again">再来一次</string>
+    <string name="again">重来</string>
     <string name="rightAnswer">猜对啦</string>
     <string name="chanceLeft">剩余过词机会:%1$s,当前得分/目标得分:%2$s/%3$s,剩余时间%4$s</string>
     <string name="guess_intro">谁来比划谁来猜：一个人以动作或行为描述词汇，不能讲跟词汇包含字同音的字或词，另一个人来猜。每轮只可过词3次。时间统一为两分钟，初级需答对4词，中级5词，高级6词。</string>
